--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,4 @@ mensagem.invalida=Menssagem inv\u00E1lida
 
 categoria.nome=Nome
 
-recurso.nao-encontrado=Recurso n\00E3o encontrado!
+recurso.nao-encontrado=Recurso n\u00E3o encontrado!
